@@ -1,3 +1,6 @@
+2 May 2010
+	Introduced CSPServer processes and a @forever decorator to easily
+	create them.
 1 May 2010
 	Removed the _process keyword from CSPProcess objects.
 	Refactored builtin processes to their own library.
